# CGAT

./: .gitignore  CGAT.py  Hypernetworksmp.py  LICENSE  README.md  __init__.py  calculate_errors.py  data.py  element_correlation.py  find_biggest_errors.py  lightning_module.py  metropolis.py  predict.py  prepare.sh  prepare_data.py  requirements.txt  resume_training.py  roost_message.py  sample.py  setup.cfg  test.py  train.py  train.sh
CGAT/: CGAT.py  Hypernetworksmp.py  __init__.py  add_volume_target.py  data.py  gaussian_process.py  lambs.py  lightning_module.py  message_changed.py  predict.py  prepare_data.py  prepare_volume_data.py  resume_training.py  test.py  test_prepare_data.py  train.py  utils.py
Utilities/: adjust_data.py  calculate_embeddings.py  calculate_errors.py  errors_of_additional_data.py  filter_embeddings.py  get_additional_data.py  get_highest_errors.py  gp_predict.py  prediction.py  prepare.sh  prepare_active_learning.py  sample.py  tsne.py
training_scripts/: train.sh  transfer_full.sh  transfer_only_residual.sh
