[metadata]
name = CGAT
version = 0.1
url = https://github.com/hyllios/CGAT
license = MIT
author = Jonathan Schmidt
description = Crystal graph attention neural networks for materials prediction

[options]
packages = CGAT
package_dir = =.

[options.entry_points]
console_scripts =
    train-CGAT = CGAT.train:run
    prepare = CGAT.prepare_volume_data:main
    train-GP = CGAT.gaussian_process:main